rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__job_manager_empty_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "        ┌Job Manager───────────────────────────────────────────────────┐        ",
        "        │                                                              │        ",
        "        │> No active jobs                                              │        ",
        "        │                                                              │        ",
        "        │                                                              │        ",
        "        │                                                              │        ",
        "        │                                                              │        ",
        "        │                                                              │        ",
        "        │Selected Job Details:                                         │        ",
        "        │┌────────────────────────────────────────────────────────────┐│        ",
        "        ││No job selected                                             ││        ",
        "        ││                                                            ││        ",
        "        ││                                                            ││        ",
        "        ││                                                            ││        ",
        "        ││                                                            ││        ",
        "        ││                                                            ││        ",
        "        ││                                                            ││        ",
        "        ││                                                            ││        ",
        "        │└────────────────────────────────────────────────────────────┘│        ",
        "        │                                                              │        ",
        "        │                  [*Close*]  [Terminate Job]                  │        ",
        "        └──────────────────────────────────────────────────────────────┘        ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 1, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 20, y: 1, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 2, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 2, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 3, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 25, y: 3, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 4, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 5, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 6, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 38, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 53, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
