rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__job_manager_one_job_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                            ┌Job Manager───────────────────────────────────────────────────┐                            ",
        "                            │                                                              │                            ",
        "                            │> #1 [Pending] Copy a.txt - 0%                                │                            ",
        "                            │                                                              │                            ",
        "                            │                                                              │                            ",
        "                            │                                                              │                            ",
        "                            │                                                              │                            ",
        "                            │                                                              │                            ",
        "                            │Selected Job Details:                                         │                            ",
        "                            │┌────────────────────────────────────────────────────────────┐│                            ",
        "                            ││Job ID: JobId([UUID])         ││                            ",
        "                            ││Started: [TIME]                                           ││                            ",
        "                            ││Status: Pending                                             ││                            ",
        "                            ││Progress:                                                   ││                            ",
        "                            ││Current:                                                    ││                            ",
        "                            ││Tab: 1                                                      ││                            ",
        "                            ││                                                            ││                            ",
        "                            ││                                                            ││                            ",
        "                            │└────────────────────────────────────────────────────────────┘│                            ",
        "                            │                                                              │                            ",
        "                            │                  [*Close*]  [Terminate Job]                  │                            ",
        "                            │                                                              │                            ",
        "                            │                                                              │                            ",
        "                            └──────────────────────────────────────────────────────────────┘                            ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 40, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 10, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 59, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 26, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 27, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 27, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 27, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 28, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 28, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 47, y: 28, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 56, y: 28, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 58, y: 28, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 73, y: 28, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 28, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 29, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 29, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 29, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 30, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 30, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 30, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 31, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
